sorted/tests/05-match-expr.stderr
error: Fmt should sort before Io
  --> tests/05-match-expr.rs:87:13
   |
87 |             Fmt(e) => write!(f, "{}", e),
   |             ^^^
